--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <img src="assets/img/logo.png" alt="">
+          <img src="assets/img/logo.png" loading="lazy" alt="" loading="lazy">
           <!-- <h1 class="sitename">BizLand</h1> -->
         </a>
 
@@ -176,7 +176,7 @@
           <div class="row gy-3">
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/about2.jpg" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
+              <img src="assets/img/about2.jpg" loading="lazy" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
             </div>
 
             <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
@@ -669,7 +669,7 @@
 
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/about3.jpeg" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
+            <img src="assets/img/about3.jpeg" loading="lazy" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
           </div>
         </div>
 
@@ -928,7 +928,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-1.jpg" loading="lazy" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -946,7 +946,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.jpg" loading="lazy" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -964,7 +964,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.jpg" loading="lazy" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -982,7 +982,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-4.jpg" loading="lazy" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
