--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
 </head>
 
 <body class="index-page">
-
+  <!-- <div id="preloader">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div> -->
   <header id="header" class="header sticky-top">
 
     <div class="topbar d-flex align-items-center">
@@ -1254,12 +1259,7 @@
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
-  <div id="preloader">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
