--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
-    </div>\
+    </div>
     <!-- End Top Bar -->
 
     <div class="branding d-flex align-items-cente">
@@ -187,7 +187,7 @@
             <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
               <div class="about-content ps-0 ps-lg-3">
                 <h3>Trusted Protection, Professional Presence</h3>
-                <p class="fst-italic">
+                <p class="">
                   Trusted, professional, and always alert—our mission is to keep you, your people, and your property safe at all times. At [Your Company Name], we specialize in providing reliable physical security solutions tailored to meet your unique needs, whether it's for corporate spaces, events, residential areas, or public gatherings.
                 </p>
                 <ul>
