--- a/About.html
+++ b/About.html
@@ -70,7 +70,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./About.html" class="active">About</a></li>
             <li><a href="./index.html#services">Services</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
             <li><a href="./index.html#team">Team</a></li>
             <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
@@ -252,7 +252,7 @@
 
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/about2.jpg" loading="lazy" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
+            <img src="assets/img/about4.jpg" loading="lazy" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
           </div>
         </div>
 
@@ -356,7 +356,7 @@
 
   </main>
 
-  <footer id="footer" class="footer">
+  <footer id="footer" class="footer" style="background-color: #f5f9ff;">
 <!-- 
     <div class="footer-newsletter">
       <div class="container">
@@ -395,7 +395,7 @@
             <li><i class="bi bi-chevron-right"></i> <a href="./index.html">Home</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="./About.html">About us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="./index.html#services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="">Gallery</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="./gallery.html">Gallery</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="./index.html#contact">Contact</a></li>
           </ul>
         </div>
