--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li><a href="#hero" class="active">Home</a></li>
             <li><a href="./About.html">About</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">Gallery</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -181,7 +181,7 @@
           <div class="row gy-3">
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/about2.jpg" loading="lazy" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
+              <img src="assets/img/about4.jpg" loading="lazy" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
             </div>
 
             <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
@@ -388,8 +388,8 @@
               <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
               <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
               <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
-              <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
-              <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
+              <!-- <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
+              <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div> -->
             </div>
           </div>
 
@@ -930,7 +930,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" loading="lazy" class="img-fluid" alt="">
@@ -948,7 +948,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" loading="lazy" class="img-fluid" alt="">
@@ -964,9 +964,9 @@
                 <span>Product Manager</span>
               </div>
             </div>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" loading="lazy" class="img-fluid" alt="">
@@ -984,7 +984,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-4.jpg" loading="lazy" class="img-fluid" alt="">
@@ -1124,8 +1124,7 @@
                   <p>info@sureprotectionsecurity.com</p>
                 </div>
               </div><!-- End Info Item -->
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253720.43177112323!2d3.3027638945312408!3d6.473235100000007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bf9892f73714d%3A0x834f91739dafebca!2solonkonla%20bustopp!5e0!3m2!1sen!2sng!4v1743521922669!5m2!1sen!2sng" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
@@ -1173,7 +1172,7 @@
 
   </main>
 
-  <footer id="footer" class="footer">
+  <footer id="footer" class="footer" style="background-color: #f5f9ff;">
 <!-- 
     <div class="footer-newsletter">
       <div class="container">
@@ -1194,19 +1193,35 @@
 
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
+        <div class="col-lg-3 col-md-6 footer-about">
           <a href="index.html" class="d-flex align-items-center">
             <img src="assets/img/logo.png" alt="">
           </a>
           <div class="footer-contact pt-3">
+            <h4>Head Office:</h4>
             <p>NT.13 Avera Vista Estate, </p>
             <p>Olokonla Bus Stop Off Lekki-Epe Expressway Lagos.</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+234 701 0477 456</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+234 701 0477 456</span>, <br> <span>+234 701 0127 667</span>, <br> <span>+234 803 8425 188</span></p>
             <p><strong>Email:</strong> <span>info@sureprotectionsecurity.com</span></p>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-3 footer-links">
+        <div class="col-lg-4 col-md-6 footer-about">
+         
+          <div class="footer-contact pt-3">
+            <h4>Abuja Branch Office:</h4>
+            <p>17A Colorado Close, Off Alvan Ikoku way,</p>
+            <p>Maitama, Abuja.</p>           
+          </div>
+
+          <div class="footer-contact pt-3">
+            <h4>Maiduguri Branch Office:</h4>
+            <p>No 13 Shehu Lamont Way, Opposite Open Air Theatre,</p>
+            <p>Maiduguri.</p>           
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
@@ -1228,7 +1243,7 @@
           </ul>
         </div> -->
 
-        <div class="col-lg-4 col-md-12">
+        <div class="col-lg-2 col-md-12">
           <h4>Follow Us</h4>
           <!-- <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p> -->
           <div class="social-links d-flex">
