--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-shield-lock icon"></i></div>
-              <h4><a href="" class="stretched-link">Integrity</a></h4>
+              <h4>Integrity</h4>
               <p>We uphold the highest ethical standards, ensuring honesty and transparency in all our operations.</p>
             </div>
           </div><!-- End Service Item -->
@@ -127,7 +127,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-person-badge icon"></i></div>
-              <h4><a href="" class="stretched-link">Professionalism</a></h4>
+              <h4>Professionalism</h4>
               <p>Our highly trained personnel deliver top-tier security services with discipline, respect, and efficiency.</p>
             </div>
           </div><!-- End Service Item -->
@@ -136,7 +136,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-eye icon"></i></div>
-              <h4><a href="" class="stretched-link">Vigilance</a></h4>
+              <h4>Vigilance</h4>
               <p>We stay alert and proactive, identifying risks before they become threats to ensure complete safety.</p>
             </div>
           </div><!-- End Service Item -->
@@ -145,7 +145,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-people icon"></i></div>
-              <h4><a href="" class="stretched-link">Customer Commitment</a></h4>
+              <h4>Customer Commitment</h4>
               <p>We prioritize client satisfaction by delivering tailored security solutions that meet unique needs.</p>
             </div>
           </div><!-- End Service Item -->
@@ -345,8 +345,8 @@
     <!-- Clients Section -->
       <section id="clients" class="clients section light-background">
 
-        <div class="container">
-
+        <div class="container section-title" data-aos="fade-up">
+          <h2>Our Clients</h2>
           <div class="swiper init-swiper">
             <script type="application/json" class="swiper-config">
               {
