--- a/About.html
+++ b/About.html
@@ -275,7 +275,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" loading="lazy" class="img-fluid" alt="">
@@ -293,7 +293,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" loading="lazy" class="img-fluid" alt="">
@@ -311,25 +311,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-            <div class="team-member">
-              <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" loading="lazy" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/team/team-4.jpg" loading="lazy" class="img-fluid" alt="">
@@ -377,26 +359,43 @@
 
     <div class="container footer-top">
       <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
+        <div class="col-lg-3 col-md-6 footer-about">
           <a href="index.html" class="d-flex align-items-center">
             <img src="assets/img/logo.png" alt="">
           </a>
           <div class="footer-contact pt-3">
+            <h4>Head Office:</h4>
             <p>NT.13 Avera Vista Estate, </p>
             <p>Olokonla Bus Stop Off Lekki-Epe Expressway Lagos.</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+234 701 0477 456</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+234 701 0477 456</span>, <br> <span>+234 701 0127 667</span>, <br> <span>+234 803 8425 188</span></p>
             <p><strong>Email:</strong> <span>info@sureprotectionsecurity.com</span></p>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-3 footer-links">
+        <div class="col-lg-4 col-md-6 footer-about">
+         
+          <div class="footer-contact pt-3">
+            <h4>Abuja Branch Office:</h4>
+            <p>17A Colorado Close, Off Alvan Ikoku way,</p>
+            <p>Maitama, Abuja.</p>           
+          </div>
+
+          <div class="footer-contact pt-3">
+            <h4>Maiduguri Branch Office:</h4>
+            <p>No 13 Shehu Lamont Way, Opposite Open Air Theatre,</p>
+            <p>Maiduguri.</p>           
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="./index.html">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="./About.html">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./index.html#services">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./gallery.html">Gallery</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="./index.html#contact">Contact</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#service">Services</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="">Gallery</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact</a></li>
+            <!-- <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li> -->
           </ul>
         </div>
 
@@ -410,7 +409,7 @@
           </ul>
         </div> -->
 
-        <div class="col-lg-4 col-md-12">
+        <div class="col-lg-2 col-md-12">
           <h4>Follow Us</h4>
           <!-- <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p> -->
           <div class="social-links d-flex">
@@ -434,6 +433,7 @@
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon -->
       </div>
     </div>
+
 
   </footer>
 
