--- a/About.html
+++ b/About.html
@@ -189,7 +189,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>why?</h2>
-        <p><span>Why Chose</span> <span class="description-title">Us</span></p>
+        <p><span>Why Choose</span> <span class="description-title">Us</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -263,7 +263,7 @@
   
 
     <!-- Team Section -->
-    <section id="team" class="team section light-background">
+    <!-- <section id="team" class="team section light-background">
 
       
       <div class="container section-title" data-aos="fade-up">
@@ -333,12 +333,12 @@
 
       </div>
 
-    </section>
+    </section> -->
     <!-- /Team Section -->
 
   </main>
 
-  <footer id="footer" class="footer" style="background-color: #f5f9ff;">
+  <footer id="footer" class="footer" style="background-color: #e8e9eb;">
 <!-- 
     <div class="footer-newsletter">
       <div class="container">
