--- a/index.html
+++ b/index.html
@@ -224,7 +224,10 @@
                   With years of hands-on experience and a reputation built on trust, discipline, and professionalism, we are committed to delivering unmatched security services. Our goal is simple—protect what matters most to you, so you can focus on your business, your guests, and your peace of mind.
                 </p>
               </div>
-
+              <div style="width: 100%; display: flex; justify-content: right; margin-top: 4px;">
+                <a href="./About.html"><button class="see-more">See More</button></a>
+              </div>
+             
             </div>
           </div>
 
@@ -606,81 +609,7 @@
 
     <!-- Why chose us section -->
 
-    <section id="about" class="about section light-background">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>why?</h2>
-        <p><span>Why Chose</span> <span class="description-title">Us</span></p>
-      </div><!-- End Section Title -->
-
-      <div class="container">
-
-        <div class="row gy-3">
-          <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
-            <div class="about-content ps-0 ps-lg-3">
-              <h3>Your Security, Our Priority</h3>
-              <p class="fst-italic">
-                At Sure Protection Security Limited, we go beyond just security—we provide peace of mind. With a commitment to excellence, professionalism, and reliability, here’s why we stand out:
-              </p>
-              <ul>
-                <li>
-                  <i class="bi bi-diagram-3"></i>
-                  <div>
-                    <h4>✅ Highly Trained Security Personnel</h4>
-                    <p>Our guards undergo rigorous training in surveillance, threat assessment, and emergency response to ensure the highest level of protection.</p>
-                  </div>
-                </li>
-                <!-- <li>
-                  <i class="bi bi-fullscreen-exit"></i>
-                  <div>
-                    <h4>✅ 24/7 Monitoring & Rapid Response</h4>
-                    <p>We offer round-the-clock security solutions with real-time monitoring and quick incident response to any security threat.</p>
-                  </div>
-                </li> -->
-                <li>
-                  <i class="bi bi-fullscreen-exit"></i>
-                  <div>
-                    <h4>✅ Advanced Technology & Surveillance</h4>
-                    <p>From high-definition CCTV systems to smart access control, we utilize cutting-edge technology to enhance security measures.</p>
-                  </div>
-                </li>
-                <!-- <li>
-                  <i class="bi bi-fullscreen-exit"></i>
-                  <div>
-                    <h4>✅ Tailored Security Solutions</h4>
-                    <p>Every business and environment is unique. We provide custom security strategies to fit your specific needs, whether for corporate buildings, events, or residential areas.</p>
-                  </div>
-                </li> -->
-                <li>
-                  <i class="bi bi-fullscreen-exit"></i>
-                  <div>
-                    <h4>✅ Strong Reputation & Trusted Service</h4>
-                    <p>With years of experience and a proven track record, we have earned the trust of businesses, institutions, and communities.</p>
-                  </div>
-                </li>
-                <li>
-                  <i class="bi bi-fullscreen-exit"></i>
-                  <div>
-                    <h4>✅ Proactive Risk Management</h4>
-                    <p>We don’t just react—we prevent. Our proactive approach helps mitigate security risks before they become threats.</p>
-                  </div>
-                </li>
-              </ul>
-              <p>
-                Your safety is our top priority. When you choose us, you’re choosing professionalism, vigilance, and reliability at every step.
-              </p>
-            </div>
-
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <img src="assets/img/about3.jpeg" loading="lazy" alt="" class="img-fluid" style="height: 700px; width: 100%; border-radius: 15px; object-fit: cover;"> 
-          </div>
-        </div>
-
-      </div>
-
-    </section>
 
     <!-- Testimonials Section -->
     <!-- <section id="testimonials" class="testimonials section dark-background">
@@ -923,7 +852,7 @@
       
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p><span>Our Hardworking</span> <span class="description-title">Team</span></p>
+        <p><span>Our Management</span> <span class="description-title">Team</span></p>
       </div>
 
       <div class="container">
@@ -1172,7 +1101,7 @@
 
   </main>
 
-  <footer id="footer" class="footer" style="background-color: #f5f9ff;">
+  <footer id="footer" class="footer" style="background-color: #e8e9eb;">
 <!-- 
     <div class="footer-newsletter">
       <div class="container">
