--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="row gy-4">
             <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="zoom-out">
               <h1>Complete <span>Security</span> Solution For Home or Business</h1>
-              <p style="font-size: 16px;">In a world of evolving threats, security isn’t optional—it’s essential. We provide top-tier protection through advanced surveillance, cybersecurity solutions, and access control systems. Whether safeguarding your home, business, or digital assets, our expert team ensures round-the-clock safety, so you can focus on what truly matters. Your security, our commitment</p>
+              <p style="font-size: 16px;">In a world of evolving threats, security isn’t optional, it’s essential. Sure Protection delivers top-tier safety through professional guarding, VIP protection, access control, CCTV surveillance, event security, escorts, and more. With our expert team and reliable services, your safety is our commitment</p>
               <!-- <div class="d-flex">
                 <a href="#about" class="btn-get-started">Get Started</a>
                 <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
