--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <div class="about-content ps-0 ps-lg-3">
                 <h3>Trusted Protection, Professional Presence</h3>
                 <p class="">
-                  Trusted, professional, and always alert—our mission is to keep you, your people, and your property safe at all times. At [Your Company Name], we specialize in providing reliable physical security solutions tailored to meet your unique needs, whether it's for corporate spaces, events, residential areas, or public gatherings.
+                  Trusted, professional, and always alert—our mission is to keep you, your people, and your property safe at all times. At Sure Protection, we specialize in providing reliable physical security solutions tailored to meet your unique needs, whether it's for corporate spaces, events, residential areas, or public gatherings.
                 </p>
                 <ul>
                   <li>
